# gtmpl-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: funcs.rs  lexer.rs  lib.rs  node.rs  parse.rs  template.rs
tests/: define.rs  niladic.rs
